Update index.html to NextBrain
Redirect URL

--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Brain Atlas</title>
-  </head>
-  <body>
-      <h1>Brain Atlas</h1>
-  </body>
-</html>
+<meta charset="utf-8">
+<title>Redirecting to https://github-pages.ucl.ac.uk/NextBrain/</title>
+<meta http-equiv="refresh" content="0; URL=https://github-pages.ucl.ac.uk/NextBrain/">
+<link rel="canonical" href="https://github-pages.ucl.ac.uk/NextBrain/">
